# rust_exercise

./: README.md
acronym/.exercism/: metadata.json
acronym/src/: lib.rs
all-your-base/.exercism/: metadata.json
all-your-base/src/: lib.rs
allergies/.exercism/: metadata.json
allergies/src/: lib.rs
allergies/tests/: allergies.rs
alphametics/.exercism/: metadata.json
alphametics/src/: lib.rs
anagram/.exercism/: metadata.json
anagram/src/: lib.rs
armstrong-numbers/.exercism/: metadata.json
armstrong-numbers/src/: lib.rs
bob/.exercism/: metadata.json
bob/src/: lib.rs
bottle-song/.exercism/: metadata.json
bottle-song/src/: lib.rs
clock/.exercism/: metadata.json
clock/src/: lib.rs
collatz-conjecture/.exercism/: metadata.json
collatz-conjecture/src/: lib.rs
difference-of-squares/.exercism/: metadata.json
difference-of-squares/src/: lib.rs
eliuds-eggs/.exercism/: metadata.json
eliuds-eggs/src/: lib.rs
etl/.exercism/: metadata.json
etl/src/: lib.rs
flower-field/.exercism/: metadata.json
flower-field/src/: lib.rs
gigasecond/.exercism/: metadata.json
gigasecond/src/: lib.rs
grains/.exercism/: metadata.json
grains/src/: lib.rs
high-scores/: Cargo.toml
high-scores/.exercism/: metadata.json
high-scores/benches/: my_benchmark.rs
high-scores/src/: lib.rs
kindergarten-garden/: Cargo.toml
kindergarten-garden/.exercism/: metadata.json
kindergarten-garden/benches/: my_benchmark.rs
kindergarten-garden/src/: lib.rs
luhn/.exercism/: metadata.json
luhn/src/: lib.rs
reverse-string/: Cargo.toml
(+17 files in other folders)
