[package]
name = "high_scores"
version = "0.1.0"
edition = "2024"

# Not all libraries from crates.io are available in Exercism's test runner.
# The full list of available libraries is here:
# https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
#[dev-dependencies]
#criterion = "0.7.0"



#[[bench]]
#name = "my_benchmark"
#harness = false